trunk/Archive2/24/13606cbcff9715/output
main.cpp:9:5: error: type 'Y' does not provide a call operator
    X(); // Create a temporary object of type X.
    ^
main.cpp:13:6: error: overloaded 'operator()' must be a non-static member function
void operator()(Y& receiver) {
     ^
main.cpp:18:4: error: type 'Y' does not provide a call operator
   X(); // Call `operator()` using X as its argument
   ^
3 errors generated.
